welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: too many arguments for method droite: ()Unit
droite(2);
      ^Balin:7: error: not found: value prendsBiscuit
	prendsBiscuit();
        ^Balin:15: error: not found: value condition
while (condition) {
       ^Balin:16: error: not found: value action
    action();
    ^