welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite(2);
while (!estFaceMur) {
while (!estSurBiscuit) {
   avance();
}
	prendsBiscuit();
while (!estSurBiscuit) {
	recule();
}
	avance();
	poseBiscuit();
}
	
while (condition) {
    action();
}
